--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f8f9fa;
+    background-color: #ff0ceb;
 }
 
 .card-img-top {
@@ -7,5 +7,5 @@ body {
 }
 
 .badge {
-    margin: 2px #f8f9fa;
+    margin: 2px #ff0ceb;
 }
